Wed Jan 10 21:26:20 1996  Theodore Y. Ts'o  <tytso@dcl>

	* kcmd.c (getport): Clear the sin structure to be zero.  (From
		Doug Engbert.)

	* krsh.c (main): Added code to default port to 544 if service not
	        found.  (From Doug Engbert.)

	* krlogin.c (main): Added code to default port to 543 or 2105 if
	        service not found.  (From Doug Engbert.)

	* login.c (main): Save KRB5CCNAME environment variable, which may
	        have been set by forward.c.  Add code for SGI to set
	        environment for its /etc/TIMEZONE (untested).  Don't print
	        MOTD twice on Suns, added #ifdef NO_MOTD.  (Patches from
		Doug Engbert).

	* kcmd.c: Removed extern global of krb5_kdc_req_sumtype, which
		wasn't being used anyway.

Tue Jan  9 22:51:16 1996  Theodore Y. Ts'o  <tytso@dcl>

	* forward.c (get_for_creds): Removed no longer used function.

	* kcmd.c (kcmd): Convert from using get_for_creds() from forward.c
		to using the official library routine, krb5_fwd_tgt_creds().

Fri Dec 22 17:42:11 1995  Theodore Y. Ts'o  <tytso@dcl>

	* login.c (main): If HAVE_SHADOW is defined, and no shadow
		password entry is availble, try using the password entry
		in the password file.

Tue Dec 19 17:11:37 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kcmd.c: Also include unistd.h, if it's available.

Tue Dec  5 20:44:39 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Use krb5util library.

	* login.c (main): Change two-argument call to syslog to three
		arguments to handle screw cases in hostnames.

Fri Dec  1 17:25:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* login.c (main, dofork): Applied patch from Scott Schwartz
	        <schwartz@galapagos.cse.psu.edu>

		Under SunOS, and maybe other systems, there is a a problem
		with krlogind.c and a similar problem with login.c as
		distributed with K5.5.

		The bug is that rlogind forks a child but retains a
		controlling tty.  If the child is in the same process
		group as the parent, which is will if you don't use a job